<resources>

    <string name="app_name" translatable="false">Text Editor</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_batch_replacement">BatchReplacement</string>
      <string name="ni">This feature is not implemented</string>
    <string name="unsupported_contnt">Unsupported content</string>
    <string name="null_contnt">Error: Content is null</string>
    <string name="restart_required">Restart Required</string>
    <string name="save">save</string>
    <string name="saveAll">saved all files</string>
    <string name="ww_wait">Please wait for word wrap to complete</string>
    <string name="theme_not_found_err">theme file not found please reinstall the Text Editor or clear app data</string>
    <string name="open_file_or_folder">Open File or Folder</string>
    <string name="open_file">Open a File</string>
    <string name="open_directory">Open a Directory</string>
    <string name="new_file">New File</string>
    <string name="newFile_hint">Name eg. Test.txt</string>
    <string name="mime">MimeType eg. text/plain</string>
    <string name="rep">Replacement</string>
    <string name="searck_keyword">Search Keyword</string>
    <string name="cs">Case Sensitive</string>
    <string name="wait">Please wait…</string>
    <string name="report_issue">Report Issue</string>
    <string name="copy">Copy</string>
    <string name="save_all">Save All</string>
    <string name="save_1">Save</string>
    <string name="undo">Undo</string>
    <string name="settings">Settings</string>
    <string name="print">Print</string>
    <string name="batch_replacement">Batch Replacement</string>
    <string name="search">Search</string>
    <string name="go_next">Go Next</string>
    <string name="go_prev">Go Prev.</string>
    <string name="close_search">Close Search</string>
    <string name="replace">Replace</string>
    <string name="share">Share</string>
    <string name="reselect">Reselect</string>
    <string name="openfile">OpenFile</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file_1">New File</string>
    <string name="rename">Rename</string>
    <string name="open_with">Open With…</string>
    <string name="save_as">Save as</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="close_this">Close this</string>
    <string name="close_others">Close others</string>
    <string name="close_all">Close all</string>
    <string name="insertdate">Insert Date</string>
    <string name="close">Close</string>
    <string name="unsaved">Unsaved Files</string>
    <string name="unsavedfiles">You have unsaved files!</string>
    <string name="cancel">Cancel</string>
    <string name="saveexit">Save and Exit</string>
    <string name="exit">Exit</string>
    <string name="rr">Restart Required</string>
    <string name="rapply">Please restart to apply settings</string>
    <string name="oled">Black Night Theme</string>
    <string name="ww">Word Wrap</string>
    <string name="keepdl">Keep Drawer Locked</string>
    <string name="restart">Restart</string>
    <string name="plugin">Plugins</string>
    <string name="mp">Manage Plugins</string>
    <string name="ap">Available Plugins</string>
    <string name="nip">No Installed Plugins</string>
    <string name="refresh">Refresh</string>
    <string name="dir_example">Name eg. Test</string>
    <string name="create">Create</string>
    <string name="ask_enter_name">Please enter a name</string>
    <string name="already_exists">A file/folder already exist with this name</string>
    <string name="attention">Attention</string>
    <string name="ask_del">Are you sure you want to delete</string>
    <string name="redir">Please reselect the directory</string>
    <string name="canthandle">No app found to handle the file</string>
    <string name="terminal">Terminal</string>
    <string name="keyword_regex">keyword (Regex)</string>
    <string name="replacement">replacement</string>
    <string name="home">HOME</string>
    <string name="end">END</string>
    <string name="tab">TAB</string>
    <string name="untab">UNTAB</string>
    <string name="next">Next</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="features_of_this_app">Features Of This App</string>
    <string name="_1_text_editor">1. Text Editor</string>
    <string name="_2_html_viewer">2. HTML Viewer</string>
    <string name="and_create_file">And Create File</string>
    <string name="how_to_use">How to Use</string>
    <string name="select_the_file_you_want_to_edit_with_quot_open_file_quot">Select the file you want to edit with \"Open File\".</string>
    <string name="this_is_the_editor_screen_save_the_file_after_editing_it">This is the editor screen. Save the file after editing it.</string>
    <string name="you_can_process_files_from_the_tab_menu">You can process files from the tab menu.</string>
    <string name="you_can_also_see_a_preview_of_the_html">You can also see a preview of the HTML.</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">OK</string>
    <string name="name_changed">Name changed</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="properties">Properties</string>
    <string name="can_t_open_keyboard_in_horizontal_mode">Can\'t open keyboard in horizontal mode</string>
    <string name="text_editor">Text Editor</string>
    <string name="file_open">File Open</string>
    <string name="write_the_file_contents_here">Write the file contents here.</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="saving_failed">Saving failed</string>
    <string name="file_already_opened">File already opened!</string>
    <string name="preview_stopped">Preview stopped</string>
    <string name="undo_done">Undo done</string>
    <string name="redo_done">Redo done</string>
    <string name="replace_all">Replace All</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="pure_black_theme_for_amoled_devices">Pure Black theme for amoled devices</string>
    <string name="themes">Themes</string>
    <string name="change_themes">Change themes</string>
    <string name="apply">Apply</string>
    <string name="application">Application</string>
    <string name="editor">Editor</string>
    <string name="enable_word_wrap_in_all_editors">Enable Word Wrap in all editors</string>
    <string name="diagnol_scrolling">Diagnol Scrolling</string>
    <string name="enable_diagnol_scrolling_in_file_browser">Enable Diagnol Scrolling in File Browser</string>
    <string name="show_line_numbers">Show Line Numbers</string>
    <string name="show_line_numbers_in_editor">Show Line Numbers in Editor</string>
    <string name="pin_line_numbers">Pin Line Numbers</string>
    <string name="pin_line_numbers_in_editor">Pin Line Numbers in Editor</string>
    <string name="extra_keys">Extra Keys</string>
    <string name="show_extra_keys_in_the_editor">Show extra keys in the editor</string>
    <string name="tab_size">Tab Size</string>
    <string name="set_tab_size">Set tab size</string>
    <string name="text_size">Text Size</string>
    <string name="set_text_size">Set text size</string>
    <string name="invalid_value">invalid value</string>
    <string name="value_too_large">Value too large</string>
    <string name="general_settings_for_the_application">General settings for the application</string>
    <string name="general_settings_for_the_editor">General settings for the editor</string>
    <string name="start">Start</string>
    <string name="failed_to_generate_pdf_file">Failed to generate PDF file.</string>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="action_completed">Action Completed</string>
    <string name="please_wait">Please wait…</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="created">Created</string>
    <string name="last_modified">Last modified</string>
    <string name="destination_path">Destination path</string>
    <string name="encode">Encode</string>
    <string name="print_code">Print Code</string>
    <string name="print_html_page">Print HTML Page</string>
    <string name="about_the_app">About the app</string>
    <string name="version_1_0">Version: 1.0</string>

</resources>
