<?xml version="1.0" encoding="utf-8"?><!-- Main content -->
<!--
MIT License

    Copyright (c) 2024 Rohit Kushvaha

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.
  -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main content -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/toolbar_bg"
                    android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
                <!--    android:theme="@style/Theme.Material3.DayNight.NoActionBar"-->

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="15dp"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="@color/text_toolbar" />
            </FrameLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:tabGravity="fill"
                app:tabIndicatorHeight="4dp"
                app:tabMode="scrollable"
                app:tabTextAppearance="@style/tab_text" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.macoou.texteditor.MainActivity.fragment.NoSwipeViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignTop="@+id/main_bottom_bar"
                android:background="@color/invert_dull"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/main_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/childs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/tab"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="@string/tab"
                            android:textColor="@color/invert_dull"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/untab"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="@string/untab"
                            android:textColor="@color/invert_dull"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/left_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="←"
                            android:textColor="@color/invert_dull"
                            android:textSize="23sp" />

                        <Button
                            android:id="@+id/up_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="↑"
                            android:textColor="@color/invert_dull"
                            android:textSize="23sp" />

                        <Button
                            android:id="@+id/right_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="→"
                            android:textColor="@color/invert_dull"
                            android:textSize="23sp" />

                        <Button
                            android:id="@+id/down_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="↓"
                            android:textColor="@color/invert_dull"
                            android:textSize="23sp" />

                        <Button
                            android:id="@+id/home"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="@string/home"
                            android:textColor="@color/invert_dull"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/end"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:backgroundTint="@android:color/transparent"
                            android:text="@string/end"
                            android:textColor="@color/invert_dull"
                            android:textStyle="bold" />


                    </LinearLayout>
                </HorizontalScrollView>


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical"/>

        <!--MIT License

Copyright (c) 2020 Kelvin Abumere and The Nambi Company

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.-->
        <com.nambimobile.widgets.efab.ExpandableFabLayout
            android:id="@+id/expandable_fab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <com.nambimobile.widgets.efab.Overlay
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.nambimobile.widgets.efab.ExpandableFab
                android:id="@+id/fab_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/fab_move"
                app:efab_color="@color/fab_bg" />
            <!--app:efab_color  app:fab_colorのように専用のものをつかわないとだめ-->
            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add"
                app:fab_color="@color/fab_label2"
                app:label_backgroundColor="@color/fab_label2"
                app:label_text="@string/openfile" />

            <com.nambimobile.widgets.efab.FabOption
                android:id="@+id/fab_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit_document_24"
                app:fab_color="@color/fab_label1"
                app:label_backgroundColor="@color/fab_label1"
                app:label_text="@string/create" />


        </com.nambimobile.widgets.efab.ExpandableFabLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone" />

    <!-- Navigation drawer -->

</androidx.drawerlayout.widget.DrawerLayout>
